<resources>
    <string name="app_name">DoAnAndroid</string>
    <string name="password1">Password</string>
    <string name="_12341">1234</string>
    <string name="phone_number1">Phone number</string>
    <string name="_0988123344">0988123344</string>
    <string name="sign_in1">Sign in</string>
    <string name="sign_up1">Sing up</string>
    <string name="_09881233881">0988123388</string>
    <string name="name1">name</string>
    <string name="Le_Tuan1">Le Tuan</string>
    <string name="Slogan">Hãy ở yên đó và nghĩ đến món ăn mà bạn thích! Chúng tôi sẽ mang nó đến ngay cho bạn.</string>
    <string name="order_name">Name</string>
    <string name="order_number">Phone Number</string>
    <string name="order_address">Address</string>
    <string name="order_total">Total</string>
    <string name="order_save">Thanh Toán</string>
    <string name="order_tructiep">Thanh toán trực tiếp</string>
    <string name="order_online">Thanh toán Online</string>
    <string name="order_note">Ghi Chú</string>

    <string name="menu_home">Home</string>
    <string name="sign_out">Sign out</string>
    <string name="menu_menu">Categories</string>
    <string name="menu_cart">Cart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
