<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:textSize="37dp"
        android:text="Thanh Toán"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editName"
            android:hint="@string/order_name"
            android:textColorHint="#010507"
            android:textColor="@color/colorBlack"
            android:textSize="34sp"
            android:inputType="textPersonName"
            app:met_baseColor="@color/colorBlack"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@color/colorPrimary"
            app:met_singleLineEllipsis="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editPhone"
            android:hint="@string/order_number"
            android:textColorHint="@color/colorBlack"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            android:inputType="phone"
            app:met_baseColor="@color/colorBlack"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_singleLineEllipsis="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editAddress"
            android:hint="@string/order_address"
            android:textColorHint="@color/colorBlack"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            android:inputType="text"
            app:met_baseColor="@color/colorBlack"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_singleLineEllipsis="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:text="@string/order_save"
        android:textColor="@android:color/white"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:buttonColor="@color/btnSignActive"
        app:shadowColor="@android:color/black"
        android:background="#6E4C9E"
        app:shadowEnabled="true"
        app:shadowHeight="5dp"
        app:cornerRadius="4dp"/>


</RelativeLayout>